LU-7992 hsm: close KUC pipe before unregistering

In llapi_hsm_copytool_unregister() close the read side of the KUC pipe
before unregistering the copytool to avoid deadlocking with a ldlm_cb
thread.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I844086b32a3b2958ecaec391accded0ca06f60a2
Reviewed-by: Jinshan Xiong <jinshan.xiong@intel.com>
Reviewed-by: Bob Glossman <bob.glossman@intel.com>
Reviewed-by: Faccini Bruno <bruno.faccini@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>
Reviewed-on: http://review.whamcloud.com/19442
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Frank Zago <fzago@cray.com>